Bug 447524 - Set the Fuzziness of the Contiguous Selection Tool to 1, and the actual Fuzziness is not 1 after restarting krita.
Summary: Set the Fuzziness of the Contiguous Selection Tool to 1, and the actual Fuzzi...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Selection (other bugs)
Version First Reported In: 5.0.0
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: regression
: 441714 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-12-26 07:01 UTC by Eranthis stellata Maxim
Modified: 2022-05-24 15:48 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot of the bug triggered after restarting krita. (54.23 KB, image/png)
2021-12-26 07:01 UTC, Eranthis stellata Maxim
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Eranthis stellata Maxim 2021-12-26 07:01:00 UTC
Created attachment 144869 [details]
Screenshot of the bug triggered after restarting krita.

SUMMARY

Set the Fuzziness of the Contiguous Selection Tool to 1, and the actual Fuzziness is not 1 after restarting krita. 


STEPS TO REPRODUCE
1. Set the Fuzziness of the Contiguous Selection Tool to 1. 
2. Restart krita. 
3. Paint some similar colors.  
4.Use Contiguous Selection Tool (Fuzziness is displayed as 1 at this time). 

OBSERVED RESULT

The Fuzziness greater than 1 is also selected. 

EXPECTED RESULT

Correctly choose the color with Fuzziness of 1. 

Krita

 Version: 5.0.0
 Languages: en_US, en, en_US, en, en_US, en, en_US, en, en_US, en, en_US, en, en_US, en, en_US, en, zh_CN, zh, en_US, en
 Hidpi: true

Qt

  Version (compiled): 5.12.12
  Version (loaded): 5.12.12

OS Information

  Build ABI: x86_64-little_endian-llp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: winnt
  Kernel Version: 10.0.19042
  Pretty Productname: Windows 10 (10.0)
  Product Type: windows
  Product Version: 10

OpenGL Info
 
  Vendor:  "Google Inc." 
  Renderer:  "ANGLE (NVIDIA GeForce GTX 970 Direct3D11 vs_5_0 ps_5_0)" 
  Version:  "OpenGL ES 3.0 (ANGLE 2.1.0.57ea533f79a7)" 
  Shading language:  "OpenGL ES GLSL ES 3.00 (ANGLE 2.1.0.57ea533f79a7)" 
  Requested format:  QSurfaceFormat(version 3.0, options QFlags<QSurfaceFormat::FormatOption>(DeprecatedFunctions), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples -1, swapBehavior QSurfaceFormat::DoubleBuffer, swapInterval 0, colorSpace QSurfaceFormat::DefaultColorSpace, profile  QSurfaceFormat::CompatibilityProfile) 
  Current format:  QSurfaceFormat(version 3.0, options QFlags<QSurfaceFormat::FormatOption>(), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples 0, swapBehavior QSurfaceFormat::DefaultSwapBehavior, swapInterval 0, colorSpace QSurfaceFormat::DefaultColorSpace, profile  QSurfaceFormat::NoProfile) 
     Version: 3.0
     Supports deprecated functions false 
     is OpenGL ES: true 
  supportsBufferMapping: true 
  supportsBufferInvalidation: false 
  Extensions: 
     "GL_OES_mapbuffer" 
     "GL_OES_surfaceless_context" 
     "GL_ANGLE_lossy_etc_decode" 
     "GL_ANGLE_texture_compression_dxt3" 
     "GL_ANGLE_translated_shader_source" 
     "GL_OES_rgb8_rgba8" 
     "GL_EXT_sRGB" 
     "GL_EXT_texture_storage" 
     "GL_OES_texture_half_float" 
     "GL_EXT_blend_minmax" 
     "GL_OES_texture_half_float_linear" 
     "GL_EXT_color_buffer_half_float" 
     "GL_KHR_debug" 
     "GL_EXT_texture_format_BGRA8888" 
     "GL_OES_EGL_image" 
     "GL_ANGLE_client_arrays" 
     "GL_ANGLE_framebuffer_multisample" 
     "GL_EXT_read_format_bgra" 
     "GL_EXT_texture_rg" 
     "GL_ANGLE_multiview" 
     "" 
     "GL_EXT_frag_depth" 
     "GL_EXT_discard_framebuffer" 
     "GL_ANGLE_framebuffer_blit" 
     "GL_OES_vertex_array_object" 
     "GL_OES_EGL_image_external_essl3" 
     "GL_OES_element_index_uint" 
     "GL_EXT_draw_buffers" 
     "GL_ANGLE_request_extension" 
     "GL_EXT_texture_compression_s3tc_srgb" 
     "GL_OES_compressed_ETC1_RGB8_texture" 
     "GL_EXT_texture_norm16" 
     "GL_CHROMIUM_bind_uniform_location" 
     "GL_CHROMIUM_copy_texture" 
     "GL_CHROMIUM_copy_compressed_texture" 
     "GL_OES_get_program_binary" 
     "GL_OES_packed_depth_stencil" 
     "GL_ANGLE_program_cache_control" 
     "GL_EXT_texture_filter_anisotropic" 
     "GL_ANGLE_texture_usage" 
     "GL_CHROMIUM_color_buffer_float_rgba" 
     "GL_ANGLE_instanced_arrays" 
     "GL_EXT_disjoint_timer_query" 
     "GL_NV_fence" 
     "GL_EXT_map_buffer_range" 
     "GL_EXT_debug_marker" 
     "GL_ANGLE_texture_compression_dxt5" 
     "GL_NV_pixel_buffer_object" 
     "GL_EXT_occlusion_query_boolean" 
     "GL_EXT_shader_texture_lod" 
     "GL_NV_pack_subimage" 
     "GL_OES_texture_npot" 
     "GL_EXT_robustness" 
     "GL_ANGLE_pack_reverse_row_order" 
     "GL_OES_EGL_image_external" 
     "GL_EXT_texture_compression_dxt1" 
     "GL_EXT_color_buffer_float" 
     "GL_EXT_unpack_subimage" 
     "GL_OES_depth32" 
     "GL_NV_EGL_stream_consumer_external" 
     "GL_OES_texture_float_linear" 
     "GL_OES_texture_float" 
     "GL_ANGLE_depth_texture" 
     "GL_OES_standard_derivatives" 
     "GL_CHROMIUM_bind_generates_resource" 
     "GL_ANGLE_robust_client_memory" 
     "GL_CHROMIUM_sync_query" 
     "GL_CHROMIUM_color_buffer_float_rgb" 

QPA OpenGL Detection Info 
  supportsDesktopGL: true 
  supportsAngleD3D11: true 
  isQtPreferAngle: true 

useBufferInvalidation (config option): false


Hardware Information

  GPU Acceleration: auto
  Memory: 32693 Mb
  Number of Cores: 16
  Swap Location: C:/Users/xi/AppData/Local/Temp

Current Settings

  Current Swap Location: C:/Users/xi/AppData/Local/Temp
  Current Swap Location writable: true
  Undo Enabled: true
  Undo Stack Limit: 200
  Use OpenGL: true
  Use OpenGL Texture Buffer: true
  Disable Vector Optimizations: false
  Disable AVX Optimizations: false
  Canvas State: OPENGL_SUCCESS
  Autosave Interval: 420
  Use Backup Files: true
  Number of Backups Kept: 1
  Backup File Suffix: ~
  Backup Location: Same Folder as the File
  Backup Location writable: false
  Use Win8 Pointer Input: false
  Use RightMiddleTabletButton Workaround: false
  Levels of Detail Enabled: false
  Use Zip64: false


Display Information
Number of screens: 2
	Screen: 0
		Name: \\.\DISPLAY1
		Depth: 32
		Scale: 1
		Resolution in pixels: 2560x1440
		Manufacturer: 
		Model: 
		Refresh Rate: 59
	Screen: 1
		Name: \\.\DISPLAY2
		Depth: 32
		Scale: 1
		Resolution in pixels: 1920x1080
		Manufacturer: 
		Model: 
		Refresh Rate: 60


---------------------
================================================================================
SESSION: 26 Dec 2021 14:32:59 +0800. Executing C:\Program Files\Krita (x64)\bin\krita.exe

Krita Version: 5.0.0, Qt version compiled: 5.12.12, loaded: 5.12.12. Process ID: 12100
-- -- -- -- -- -- -- --
26 Dec 2021 14:32:59 +0800: Style: fusion. Available styles: windowsvista, Windows, Fusion
26 Dec 2021 14:33:14 +0800: Non-store package - creating updater
26 Dec 2021 14:34:18 +0800: Created image "未命名", 2480 * 3508 pixels, 300 dpi. Color model: 8 位整数/通道 RGB/透明度 (sRGB-elle-V2-srgbtrc.icc). Layers: 2
26 Dec 2021 14:34:38 +0800: CLOSING SESSION
================================================================================
SESSION: 26 Dec 2021 14:34:40 +0800. Executing C:\Program Files\Krita (x64)\bin\krita.exe

Krita Version: 5.0.0, Qt version compiled: 5.12.12, loaded: 5.12.12. Process ID: 10616
-- -- -- -- -- -- -- --
26 Dec 2021 14:34:40 +0800: Style: fusion. Available styles: windowsvista, Windows, Fusion
26 Dec 2021 14:34:41 +0800: Database is up to date. Version: 0.0.15, created by Krita 5.0.0, at 周日 12月 26 14:33:01 2021
26 Dec 2021 14:34:43 +0800: Non-store package - creating updater
26 Dec 2021 14:34:50 +0800: Created image "Unnamed", 2480 * 3508 pixels, 300 dpi. Color model: 8-bit integer/channel RGB/Alpha (sRGB-elle-V2-srgbtrc.icc). Layers: 2
26 Dec 2021 14:41:44 +0800: CLOSING SESSION
================================================================================
SESSION: 26 Dec 2021 14:41:47 +0800. Executing C:\Program Files\Krita (x64)\bin\krita.exe

Krita Version: 5.0.0, Qt version compiled: 5.12.12, loaded: 5.12.12. Process ID: 12028
-- -- -- -- -- -- -- --
26 Dec 2021 14:41:47 +0800: Style: fusion. Available styles: windowsvista, Windows, Fusion
26 Dec 2021 14:41:48 +0800: Database is up to date. Version: 0.0.15, created by Krita 5.0.0, at 周日 12月 26 14:33:01 2021
26 Dec 2021 14:41:50 +0800: Non-store package - creating updater
26 Dec 2021 14:43:25 +0800: Created image "Unnamed", 2480 * 3508 pixels, 300 dpi. Color model: 8-bit integer/channel RGB/Alpha (sRGB-elle-V2-srgbtrc.icc). Layers: 2

---------------------
Comment 1 Ahab Greybeard 2021-12-26 10:36:20 UTC
I can confirm this as described with the 5.0.0 appimage on Debian 10.
After a restart, the Fuzziness is definitely at a higher level than 1 even though 1 is displayed.
A single simple test showed that it was actually at about 11.
Changing the Fuzziness value then makes it behave as indicated.

If a Fuzziness value higher than 1 is selected and then a restart is done, that number is remembered and seems to be correct.

This problem does not happen with 4.4.8 and was introduced in 5.0.0-beta1, hence regression wrt 4.4.8.
Comment 2 Bug Janitor Service 2022-03-24 04:35:49 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/1387
Comment 3 tomtomtomreportingin 2022-03-24 16:33:06 UTC
Git commit 02b04c960e2b97bf743afc8859054d64ad13a9ff by Tom Tom Tom.
Committed on 24/03/2022 at 04:26.
Pushed by dkazakov into branch 'krita/5.0'.

(5.0) Fix setting of minimum fuzziness on contiguous select tool

M  +5    -0    plugins/tools/selectiontools/kis_tool_select_contiguous.cc

https://invent.kde.org/graphics/krita/commit/02b04c960e2b97bf743afc8859054d64ad13a9ff
Comment 4 Lynx3d 2022-05-24 15:48:10 UTC
*** Bug 441714 has been marked as a duplicate of this bug. ***