(5.0) Fix setting of minimum fuzziness on contiguous select tool

BUG: 447524